--- a/1st_page.html
+++ b/1st_page.html
@@ -284,7 +284,7 @@ While Amazon’s ad revenue is tiny compared to its e-commerce business, it’s 
 		<div class="content" id="g">
 			<table class="table">
 				<tr>
-					<td class="inside1">The Galaxy S10+ Plus is now on sale. The phone costs $999 to start for 8GB of RAM and 128GB of storage. But you can also order the S10 Plus with 512GB of storage for $1,249 or get a whopping 1TB of storage and 12GB of RAM for $1,599. </td>
+					<td class="inside1">The Galaxy S10++ Plus is now on sale. The phone costs $999 to start for 8GB of RAM and 128GB of storage. But you can also order the S10 Plus with 512GB of storage for $1,249 or get a whopping 1TB of storage and 12GB of RAM for $1,599. </td>
 					<td class="inside2"><img class="image1" src="news_1.jpg" alt="image"></td>
 				</tr>
 			</table>
